2020. 11. 01. 수정사항 - 이미지 자세히 보기 추가 - RxJava 로직 개선.

--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.hmju.memo.viewModels.GalleryViewModel" />
+            type="com.hmju.memo.viewmodels.GalleryViewModel" />
 
     </data>
 
