--- a/app/src/main/res/layout/activity_image_edit.xml
+++ b/app/src/main/res/layout/activity_image_edit.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.hmju.memo.viewModels.ImageEditViewModel" />
+            type="com.hmju.memo.viewmodels.ImageEditViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
