--- a/app/src/main/res/layout/item_memo_detail_image.xml
+++ b/app/src/main/res/layout/item_memo_detail_image.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
+        <import type="Integer" />
+
         <variable
             name="viewModel"
-            type="com.hmju.memo.base.BaseViewModel" />
+            type="com.hmju.memo.viewmodels.MemoDetailViewModel" />
+
+        <variable
+            name="pos"
+            type="java.lang.Integer" />
 
         <variable
             name="item"
@@ -18,6 +25,7 @@
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imgThumb"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:adjustViewBounds="true"
@@ -26,7 +34,9 @@
             app:fileItem="@{item}"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent"
-            app:viewModel="@{viewModel}" />
+            app:turtleClick="@{()->viewModel.moveDetailImage(pos)}"
+            app:viewModel="@{viewModel}"
+            tools:src="@drawable/temp1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
