--- a/app/src/main/res/layout/item_memo_img.xml
+++ b/app/src/main/res/layout/item_memo_img.xml
@@ -15,7 +15,7 @@
 
         <variable
             name="viewModel"
-            type="com.hmju.memo.viewModels.MainViewModel" />
+            type="com.hmju.memo.viewmodels.MainViewModel" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
