--- a/app/src/main/res/layout/layout_header_type_img_search.xml
+++ b/app/src/main/res/layout/layout_header_type_img_search.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.hmju.memo.viewModels.MainViewModel" />
+            type="com.hmju.memo.viewmodels.MainViewModel" />
 
     </data>
 
