--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
         <item name="android:colorBackground">@color/colorBackground</item>
         <item name="android:windowBackground">@color/colorBackground</item>
 
-<!--        <item name="android:navigationBarColor">@color/colorNavigation</item>-->
+        <!--        <item name="android:navigationBarColor">@color/colorNavigation</item>-->
     </style>
 
     <style name="AppTheme.Memo">
@@ -68,6 +68,18 @@
     <style name="CommonDialog" parent="Theme.AppCompat.Dialog.Alert">
         <item name="android:windowMinWidthMajor">300dp</item>
         <item name="android:windowMinWidthMinor">300dp</item>
+    </style>
+
+    <style name="FullscreenTheme" parent="AppTheme">
+        <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="metaButtonBarStyle">?android:attr/buttonBarStyle</item>
+        <item name="metaButtonBarButtonStyle">?android:attr/buttonBarButtonStyle</item>
+    </style>
+
+    <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
+        <item name="android:background">@color/black_overlay</item>
     </style>
     <!-- [e] Common Dialog Style -->
 
