- Pacakage Name 재수정 -> extension -> convenience
- RxExtension -> Extensions 클래스명 수정
Mutlple Null Check 확장 함수 추가.
- CommonBindingAdapter
-> 각 함수들 주석 처리 및 코드 정리
-> 공통함수들 추가.

-ItemListAdapter 추가
-ArgumentDefine 수정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,9 +94,10 @@
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.isLogin == false ? @string/str_login_request : @string/fmt_hello_user(viewModel.user.userName)}"
             android:textColor="@color/colorTextPrimary"
             android:textSize="@dimen/text_size_20"
+            app:data="@{viewModel.isLogin == false ? @string/str_login_request : viewModel.user.userName}"
+            app:fmtText="@{viewModel.isLogin == false ? @string/str_login_request : @string/fmt_hello_user(viewModel.user.userName)}"
             app:turtleClick="@{()->viewModel.moveLogin()}" />
 
         <!-- 프로필 이미지 뷰 -->
