--- a/app/src/main/res/layout/item_memo_normal.xml
+++ b/app/src/main/res/layout/item_memo_normal.xml
@@ -10,6 +10,10 @@
             type="Integer" />
 
         <variable
+            name="detailView"
+            type="com.hmju.memo.viewmodels.MemoDetailViewModel" />
+
+        <variable
             name="viewModel"
             type="com.hmju.memo.viewmodels.MainViewModel" />
 
