--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -78,5 +78,19 @@
         <attr name="metaButtonBarButtonStyle" format="reference" />
     </declare-styleable>
 
+    <!-- [s] Pager Tab Strip Style -->
+    <declare-styleable name="PagerTabLayout">
+        <attr name="pagerTab_type" format="enum">
+            <enum name="fixed" value="0" />
+            <enum name="scrollable" value="1" />
+        </attr>
+        <attr name="pagerTab_textStyle" format="color" />
+        <attr name="pagerTab_indicatorColor" format="color" />
+        <attr name="pagerTab_indicatorHeight" format="dimension" />
+        <attr name="pagerTab_scrollingOffset" format="dimension" />
+        <attr name="pagerTab_icon_width" format="dimension" />
+    </declare-styleable>
+    <!-- [e] Pager Tab Strip Style -->
+
 
 </resources>
