- Extensions 확장 함수 추가.

--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -130,7 +130,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:pressedTranslationZ="0dp"
             app:recyclerView="@{rvContents}"
-            app:srcCompat="@drawable/ic_arrow_top" />
+            android:src="@drawable/ic_arrow_top" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
