--- a/app/src/main/res/layout/item_memo_detail_more.xml
+++ b/app/src/main/res/layout/item_memo_detail_more.xml
@@ -30,7 +30,7 @@
             android:layout_height="@dimen/size_30"
             android:layout_margin="@dimen/margin_size_5"
             android:adjustViewBounds="true"
-            app:drawableId="@{item.iconId}"
+            android:src="@{item.iconId}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
