- CommonBindingAdapter 수정 - EdtiTextBindingAdapter 수정

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,7 +60,8 @@
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:text="@={viewModel.strPw}"
-                    app:editTextListener="@{viewModel}" />
+                    app:editTextConfirm="@{()->viewModel.startLogin()}"
+                    />
 
             </com.google.android.material.textfield.TextInputLayout>
 
