--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -92,5 +92,21 @@
     </declare-styleable>
     <!-- [e] Pager Tab Strip Style -->
 
+    <!-- CustomProgressView Attr [Start] -->
+    <declare-styleable name="CustomProgressView">
+        <attr name="type" format="enum"> <!-- ProgressView type horizontal or vertical -->
+            <enum name="horizontal" value="0" />
+            <enum name="vertical" value="1" />
+        </attr>
+        <attr name="gradientRadius" format="dimension" /> <!-- defines gradient radius -->
+        <attr name="gradientStartColor" format="color" /> <!-- defines gradient start color -->
+        <attr name="gradientCenterColor" format="color" /> <!-- defines gradient center color -->
+        <attr name="gradientEndColor" format="color" /> <!-- defines gradient end color -->
+        <attr name="gradientLocation" format="float" /> <!-- defines gradient color location -->
+        <attr name="bgColor" format="color" />   <!-- Background Color -->
+        <attr name="max" format="integer" /> <!-- defines the maximum value -->
+        <attr name="min" format="integer" /> <!-- defines the minimum value -->
+    </declare-styleable>
+    <!-- CustomProgressView Attr [End] -->
 
 </resources>
